# agent_demo

./: README.md  run_server.py
agent-system/: .env  README.md  pyproject.toml  requirements.txt
agent-system/configs/: api_catalog.json  skills.json
agent-system/deploy/: deploy_llm.sh  test.py
agent-system/eval/: dataset.jsonl  run_eval.py
agent-system/src/: main.py
agent-system/src/agent/: __init__.py  agent.py  inference.py
agent-system/src/agent_system/: config.py  logging_config.py  paths.py
agent-system/src/agent_system/agent/: schema.py
agent-system/src/agent_system/api/: definitions.py  main.py
agent-system/src/api/: definitions.py
agent-system/src/memory/: __init__.py  conversation_memory.py
agent-system/src/planner/: __init__.py  task_planner.py
agent-system/src/prompts/: templates.py
agent-system/src/skills/: domain_classifier.py  registry.py  skill_search.py
agent-system/src/tools/: __init__.py  tool_executor.py
agent-system/src/utils/: helpers.py
agent-system/tests/: test_agent.py  test_skill_search.py
